2004-09-16 Magnus Hagdorn
 * CF_colourmap.py: need to find min max of field by hand so we honour the NC_FILL_VALUE
 * CF_options.py: coordinates should be list rather than tuples
 * CF_profile.py: linearly interpolate vertical layers for each column
 * CF_utils.py: add linear interpolation routine
 * temp.cpt, mb.cpt: change background and foreground to white

2004-08-26 Magnus Hadorn
 * CF_area.py: we can now also plot profile lines
 * CF_loadfile.py: add methods to calculate ice area and volume
 * CF_profile.py: we can now load 2D profiles (e.g. temperatures etc)
   this does not quite work yet because we use triangulate which will interpolate
   data outside ice sheet
 * CF_profilearea.py: simple plotting area for profiles
 * CF_timeseries.py: use new AutoXY API
 * __init__.py: added CF_profilearea.py
 * create_topo.py: we can now also specify upper right corner
 * plotProfile.py: use CF_profilearea.py
 * plotSpot.py: use new AutoXY API
 * temp.cpt: NaN nodes set to white
	
2004-08-20 Magnus Hagdorn
 * plotProfile.py works now

2004-08-20 Magnus Hagdorn
 * start of profile stuff

2004-08-09 Magnus Hagdorn
 * added new program to plot variables at a single location (plotSpot.py, setup.py)
 * added non-geographic projection (CF_area.py, CF_file.py 
 * CF_file.py: added property for grid spacing
 * new method to extract data at a single node (CF_loadfile.py)
 * CF_options.py: added spots, homologous temperature, level selection
 * plotCFvar.py: added level selection
	
2004-07-01 Magnus Hagdorn
 * plotEISvar.py: added new program to plot EIS forcing and variable
 * added plotting of land above SL (CF_area.py, CF_options.py, plotCFvar.py)
 * CF_IOmisc.py: timeseries I/O
 * CF_timeseries.py: timeseries

2004-06-21 Magnus Hagdorn
 * add append option to CF_createfile.py

2004-06-21 Ian Rutt
 * Added -f option to add_projinfo.py to allow overwriting
   of existing projection data, if desired.

2004-06-18 Magnus Hagdorn
 * override colourmaps

2004-06-18 Magnus Hagdorn