@@ -1,3 +1,7 @@
+2004-09-17 Magnus Hagdorn
+ * added glide launcher
+ * added super EISMINT plotter
+
 2004-09-16 Magnus Hagdorn
  * CF_colourmap.py: need to find min max of field by hand so we honour the NC_FILL_VALUE
  * CF_options.py: coordinates should be list rather than tuples
